# mqs

./: .gitattributes  .gitignore  404.html  CMakeLists.txt  Dockerfile  Dockerfile.ci  README.adoc  index.html  singularity.def  site-dev.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: antora-to-gh-pages.yml  ci.yml  release.yml
cases/0.109/: index.html
docs/: CMakeLists.txt  antora.yml  package.json  site.yml
mqs/0.1.0/: acknowledgments.html  appendix.html  bibliography.html  code.html  conclusion.html  discretization.html  formulation.html  front.html  implementation.html  index.html  roadmap.html  validation.html
mqs/BDF/: acknowledgments.html  appendix.html  bibliography.html  code.html  conclusion.html  discretization.html  formulation.html  front.html  implementation.html  index.html  roadmap.html  validation.html
mqs/BiotSavart-Bcs/: acknowledgments.html  appendix.html  bibliography.html  code.html  conclusion.html  discretization.html  formulation.html  front.html  implementation.html  index.html  roadmap.html  validation.html
mqs/latest/: acknowledgments.html  appendix.html  bibliography.html  code.html  conclusion.html  discretization.html  formulation.html  front.html  implementation.html  index.html  roadmap.html  (+1 more)
src/: .test.form  .tests.feelpp2d  .tests.mqs  CMakeLists.txt  feelpp2d.cfg  feelpp2d.cpp  feelpp2d.geo  heatonly.cpp  main.cpp  mqs-blockform.cpp  mqs-form.cpp  mqs-th-form.cpp  mqs.cfg  mqs.cpp  mqs.geo  mqsheatpicard.cpp  mqsheatweak.cpp  test1.cfg  test1.cpp  test1.geo  test2.cfg  test2.cpp  torusAir.geo
(+242 files in other folders)
